Updated with version: 4.41.0 changes

--- a/adblock-betafish/adblock.css
+++ b/adblock-betafish/adblock.css
@@ -57,6 +57,16 @@ Global Styles
   --popup-button-reenable-hovered-text-color: white;
   --popup-yt-icon-color: #e40d0d;
   --popup-twitch-icon-color: #663399;
+  --popup-vpn-cta-button-bg-color: #0055b7;
+  --popup-vpn-cta-button-color: #ffffff;
+  --popup-vpn-cta-hover-bg-color: #2284f7;
+  --popup-vpn-cta-hover-color: white;
+  --popup-vpn-cta-hover-close-bg-color: #03bcfc;
+  --popup-vpn-cta-hover-close-color: #ffffff;
+  --popup-vpn-cta-close-icon-color: white;
+  --popup-vpn-cta-linear-gradient-a: #f4f4f4;
+  --popup-vpn-cta-linear-gradient-b: white;
+  --popup-large-vpn-cta-text-color: #333333;
   /* Additional for Options Page */
   --background-color: white;
   --link-color: #2284f7;
@@ -144,6 +154,22 @@ Global Styles
   --icon-notes-main-text-color: white;
   --icon-notes-background-color: #e40d0d;
   --image-background-color: white;
+  /* email CTA */
+  --email-error-message-color: #ce0707;
+  --email-btn-color: var(--gray1);
+  --email-btn-bg-color: #ffca00;
+  --mail-dialog-header-text-color: #333333;
+  --mail-dialog-header-border-color: #c6c6c6;
+  --mail-dialog-content-text-color: #666666;
+  --mail-dialog-textfield-text-color: #333333;
+  --mail-dialog-textfield-border-color: #666666;
+  --mail-dialog-textfield-background-color: white;
+  --mail-dialog-checkbox-color: #333333;
+  --mail-dialog-checkbox-background-color: #0047ff;
+  --mail-dialog-background-color: white;
+  --mail-dialog-border-color: #c6c6c6;
+  --mail-dialog-link-color: #0047ff;
+  --mail-dialog-drop-shadow-color: rgba(51, 51, 51, 0.2);
 }
 
 * {
