--- a/adblock-betafish/options/color_themes.css
+++ b/adblock-betafish/options/color_themes.css
@@ -30,6 +30,16 @@
   --popup-button-reenable-hovered-text-color: white;
   --popup-yt-icon-color: #e40d0d;
   --popup-twitch-icon-color: #663399;
+  --popup-vpn-cta-button-bg-color: #0055b7;
+  --popup-vpn-cta-button-color: #ffffff;
+  --popup-vpn-cta-hover-bg-color: white;
+  --popup-vpn-cta-hover-color: #333333;
+  --popup-vpn-cta-close-icon-color: white;
+  --popup-vpn-cta-hover-close-bg-color: white;
+  --popup-vpn-cta-hover-close-color: #666666;
+  --popup-vpn-cta-linear-gradient-a: #666666;
+  --popup-vpn-cta-linear-gradient-b: rgba(196, 196, 196, 0.25);
+  --popup-large-vpn-cta-text-color: #ffffff;
   --popup-dc-cta-background-color: var(--red2);
   --popup-dc-cta-color: white;
   --popup-dc-cta-close-background-color-on-hover: #a60000;
@@ -89,6 +99,21 @@
   --sync-delete-bg-color: var(--gray2);
   --sync-delete-color: var(--gray5);
   --sync-delete-title-color: white;
+  /* email CTA */
+  --email-error-message-color: #ce0707;
+  --email-btn-color: white;
+  --email-btn-bg-color: #e40d0d;
+  --mail-dialog-header-text-color: #333333;
+  --mail-dialog-header-border-color: #999999;
+  --mail-dialog-content-text-color: #333333;
+  --mail-dialog-textfield-text-color: #333333;
+  --mail-dialog-textfield-border-color: #999999;
+  --mail-dialog-textfield-background-color: white;
+  --mail-dialog-checkbox-color: #333333;
+  --mail-dialog-background-color: white;
+  --mail-dialog-border-color: #c6c6c6;
+  --mail-dialog-link-color: #0047ff;
+  --mail-dialog-drop-shadow-color: rgba(51, 51, 51, 0.2);
   --dc-icon-color: white;
   --dc-list-title: white;
   --dc-warning-color: #000000;
@@ -124,6 +149,14 @@
   --popup-button-reenable-hovered-text-color: white;
   --popup-yt-icon-color: #e40d0d;
   --popup-twitch-icon-color: #663399;
+  --popup-vpn-cta-hover-bg-color: #2284f7;
+  --popup-vpn-cta-hover-color: white;
+  --popup-vpn-cta-close-icon-color: #999999;
+  --popup-vpn-cta-hover-close-bg-color: #03bcfc;
+  --popup-vpn-cta-hover-close-color: #ffffff;
+  --popup-vpn-cta-linear-gradient-a: #f4f4f4;
+  --popup-vpn-cta-linear-gradient-b: white;
+  --popup-large-vpn-cta-text-color: #333333;
   --popup-dc-cta-background-color: #ffca00;
   --popup-dc-cta-color: var(--gray1);
   --popup-dc-cta-close-background-color-on-hover: #ffd949;
@@ -183,6 +216,21 @@
   --sync-delete-bg-color: var(--background-color);
   --sync-delete-color: #000000;
   --sync-delete-title-color: #000000;
+  /* email CTA */
+  --email-error-message-color: #ce0707;
+  --email-btn-color: var(--gray1);
+  --email-btn-bg-color: #ffca00;
+  --mail-dialog-header-text-color: #333333;
+  --mail-dialog-header-border-color: #c6c6c6;
+  --mail-dialog-content-text-color: #666666;
+  --mail-dialog-textfield-text-color: #333333;
+  --mail-dialog-textfield-border-color: #666666;
+  --mail-dialog-textfield-background-color: white;
+  --mail-dialog-checkbox-color: #333333;
+  --mail-dialog-background-color: white;
+  --mail-dialog-border-color: #c6c6c6;
+  --mail-dialog-link-color: #0047ff;
+  --mail-dialog-drop-shadow-color: rgba(51, 51, 51, 0.2);
   --dc-icon-color: var(--gray1);
   --dc-list-title: var(--gray1);
   --dc-warning-color: #000000;
@@ -219,6 +267,16 @@
   --popup-button-reenable-hovered-text-color: white;
   --popup-yt-icon-color: #e40d0d;
   --popup-twitch-icon-color: #663399;
+  --popup-vpn-cta-button-bg-color: #0055b7;
+  --popup-vpn-cta-button-color: #ffffff;
+  --popup-vpn-cta-hover-bg-color: white;
+  --popup-vpn-cta-hover-color: #333333;
+  --popup-vpn-cta-close-icon-color: white;
+  --popup-vpn-cta-hover-close-bg-color: white;
+  --popup-vpn-cta-hover-close-color: #666666;
+  --popup-vpn-cta-linear-gradient-a: #f4f4f4;
+  --popup-vpn-cta-linear-gradient-b: white;
+  --popup-large-vpn-cta-text-color: #333333;
   --popup-dc-cta-background-color: var(--red2);
   --popup-dc-cta-color: white;
   --popup-dc-cta-close-background-color-on-hover: #a60000;
@@ -283,6 +341,20 @@
   --popup-themes-cta-background: #003643;
   --popup-themes-cta-background-on-hover: #00a498;
   --popup-themes-cta-color-on-hover: #003643;
+  --email-error-message-color: #ce0707;
+  --email-btn-color: white;
+  --email-btn-bg-color: #e40d0d;
+  --mail-dialog-header-text-color: #90a2a2;
+  --mail-dialog-header-border-color: #90a2a2;
+  --mail-dialog-content-text-color: #90a2a2;
+  --mail-dialog-textfield-text-color: #90a2a2;
+  --mail-dialog-textfield-border-color: #003643;
+  --mail-dialog-textfield-background-color: #ffffff;
+  --mail-dialog-checkbox-color: #90a2a2;
+  --mail-dialog-background-color: #003643;
+  --mail-dialog-border-color: #c6c6c6;
+  --mail-dialog-link-color: #00a498;
+  --mail-dialog-drop-shadow-color: rgba(0, 0, 0, 0.15);
   --dc-icon-color: var(--gray1);
   --dc-list-title: #90a2a2;
   --dc-warning-color: #ffffff;
@@ -319,6 +391,16 @@
   --popup-button-reenable-hovered-text-color: white;
   --popup-yt-icon-color: #e40d0d;
   --popup-twitch-icon-color: #663399;
+  --popup-vpn-cta-button-bg-color: #0055b7;
+  --popup-vpn-cta-button-color: #ffffff;
+  --popup-vpn-cta-hover-bg-color: white;
+  --popup-vpn-cta-hover-color: #333333;
+  --popup-vpn-cta-close-icon-color: #999999;
+  --popup-vpn-cta-hover-close-bg-color: white;
+  --popup-vpn-cta-hover-close-color: #666666;
+  --popup-vpn-cta-linear-gradient-a: #f4f4f4;
+  --popup-vpn-cta-linear-gradient-b: white;
+  --popup-large-vpn-cta-text-color: #333333;
   --popup-dc-cta-background-color: var(--red2);
   --popup-dc-cta-color: white;
   --popup-dc-cta-close-background-color-on-hover: #a60000;
@@ -383,6 +465,21 @@
   --popup-themes-cta-background: #fdf6e3;
   --popup-themes-cta-background-on-hover: #00a498;
   --popup-themes-cta-color-on-hover: #fdf6e3;
+  /* email CTA */
+  --email-error-message-color: #ce0707;
+  --email-btn-color: var(--gray1);
+  --email-btn-bg-color: #ffca00;
+  --mail-dialog-header-text-color: #657b83;
+  --mail-dialog-header-border-color: #babfb6;
+  --mail-dialog-content-text-color: #657b83;
+  --mail-dialog-textfield-text-color: #657b83;
+  --mail-dialog-textfield-border-color: #657b83;
+  --mail-dialog-textfield-background-color: #ffffff;
+  --mail-dialog-checkbox-color: #657b83;
+  --mail-dialog-background-color: #fdf6e3;
+  --mail-dialog-border-color: #c6c6c6;
+  --mail-dialog-link-color: #00a498;
+  --mail-dialog-drop-shadow-color: rgba(51, 51, 51, 0.2);
   --dc-icon-color: var(--gray1);
   --dc-list-title: #657b83;
   --dc-warning-color: #000000;
@@ -418,6 +515,15 @@
   --popup-button-reenable-hovered-text-color: var(--gray1);
   --popup-yt-icon-color: #e40d0d;
   --popup-twitch-icon-color: white;
+  --popup-vpn-cta-button-bg-color: #0055b7;
+  --popup-vpn-cta-hover-bg-color: white;
+  --popup-vpn-cta-hover-color: #333333;
+  --popup-vpn-cta-hover-close-bg-color: white;
+  --popup-vpn-cta-hover-close-color: #666666;
+  --popup-vpn-cta-close-icon-color: white;
+  --popup-vpn-cta-linear-gradient-a: #f4f4f4;
+  --popup-vpn-cta-linear-gradient-b: white;
+  --popup-large-vpn-cta-text-color: #333333;
   --popup-dc-cta-background-color: #4ecdf9;
   --popup-dc-cta-color: #48226e;
   --popup-dc-cta-close-background-color-on-hover: #86e0ff;
@@ -460,6 +566,16 @@
   --popup-button-reenable-hovered-text-color: white;
   --popup-yt-icon-color: white;
   --popup-twitch-icon-color: #663399;
+  --popup-vpn-cta-button-bg-color: #0055b7;
+  --popup-vpn-cta-button-color: #ffffff;
+  --popup-vpn-cta-hover-bg-color: white;
+  --popup-vpn-cta-hover-color: #333333;
+  --popup-vpn-cta-hover-close-bg-color: white;
+  --popup-vpn-cta-hover-close-color: #666666;
+  --popup-vpn-cta-close-icon-color: white;
+  --popup-vpn-cta-linear-gradient-a: #f4f4f4;
+  --popup-vpn-cta-linear-gradient-b: white;
+  --popup-large-vpn-cta-text-color: #333333;
   --popup-dc-cta-background-color: white;
   --popup-dc-cta-color: var(--gray1);
   --popup-dc-cta-close-background-color-on-hover: #f18686;
@@ -507,6 +623,16 @@
   --popup-button-reenable-hovered-text-color: white;
   --popup-yt-icon-color: #e40d0d;
   --popup-twitch-icon-color: #663399;
+  --popup-vpn-cta-button-bg-color: #0055b7;
+  --popup-vpn-cta-button-color: #ffffff;
+  --popup-vpn-cta-hover-bg-color: white;
+  --popup-vpn-cta-hover-color: #333333;
+  --popup-vpn-cta-hover-close-bg-color: white;
+  --popup-vpn-cta-hover-close-color: #666666;
+  --popup-vpn-cta-close-icon-color: white;
+  --popup-vpn-cta-linear-gradient-a: #f4f4f4;
+  --popup-vpn-cta-linear-gradient-b: white;
+  --popup-large-vpn-cta-text-color: #333333;
   --popup-dc-cta-background-color: white;
   --popup-dc-cta-color: var(--gray1);
   --popup-dc-cta-close-background-color-on-hover: #86e0ff;
@@ -554,6 +680,16 @@
   --popup-button-reenable-hovered-text-color: var(--gray1);
   --popup-yt-icon-color: #e40d0d;
   --popup-twitch-icon-color: #663399;
+  --popup-vpn-cta-button-bg-color: #0055b7;
+  --popup-vpn-cta-button-color: #ffffff;
+  --popup-vpn-cta-hover-bg-color: white;
+  --popup-vpn-cta-hover-color: #333333;
+  --popup-vpn-cta-hover-close-bg-color: white;
+  --popup-vpn-cta-hover-close-color: #666666;
+  --popup-vpn-cta-close-icon-color: white;
+  --popup-vpn-cta-linear-gradient-a: #f4f4f4;
+  --popup-vpn-cta-linear-gradient-b: white;
+  --popup-large-vpn-cta-text-color: #333333;
   --popup-dc-cta-background-color: white;
   --popup-dc-cta-color: var(--gray1);
   --popup-dc-cta-close-background-color-on-hover: #ffd780;
