Updated with version: 4.42.0 changes

--- a/adblock-betafish/adblock.css
+++ b/adblock-betafish/adblock.css
@@ -127,7 +127,7 @@ Global Styles
   --dc-icon-color: var(--gray1);
   --dc-list-title: var(--gray1);
   --dc-warning-color: #000000;
-  --dc-warning-bg-color: #ffca00;
+  --dc-warning-bg-color: #fff2bf;
   /* Aliases for Themes CTA:
      normally these are defined by other custom properties, but here they are set
      with the solarized colors since it's the default Theme CTA to use */
