--- a/adblock-betafish/button/popup.css
+++ b/adblock-betafish/button/popup.css
@@ -178,13 +178,15 @@ button.premium-cta-close:hover {
   padding: 1px 5px;
   line-height: normal;
 }
-#mab_new_cta_close {
+#mab_new_cta_close,
+#div_free_dc_cta_close {
   background-color: #03bcfc;
 }
 .div_vpn_cta_bold {
   font-weight: bold;
 }
-#mab_new_cta_close > i {
+#mab_new_cta_close > i,
+#div_free_dc_cta_close > i {
   color: white;
 }
 #vpn_cta_1_close,
@@ -239,7 +241,8 @@ button.premium-cta-close:hover {
   cursor: pointer;
 }
 
-#div_myadblock_enrollment_v2:hover {
+#div_myadblock_enrollment_v2:hover,
+#div_free_dc_cta:hover {
   color: white;
   background-color: #2284f7;
 }
