--- a/adblock-betafish/options/color_themes.css
+++ b/adblock-betafish/options/color_themes.css
@@ -117,7 +117,7 @@
   --dc-icon-color: white;
   --dc-list-title: white;
   --dc-warning-color: #000000;
-  --dc-warning-bg-color: #ffca00;
+  --dc-warning-bg-color: #fff2bf;
 }
 #default_theme {
   /* Needed for Pop-up Menu */
@@ -234,7 +234,7 @@
   --dc-icon-color: var(--gray1);
   --dc-list-title: var(--gray1);
   --dc-warning-color: #000000;
-  --dc-warning-bg-color: #ffca00;
+  --dc-warning-bg-color: #fff2bf;
 }
 #solarized_theme,
 [data-theme-cta="solarized_theme"] {
@@ -358,7 +358,7 @@
   --dc-icon-color: var(--gray1);
   --dc-list-title: #90a2a2;
   --dc-warning-color: #ffffff;
-  --dc-warning-bg-color: #ffca00;
+  --dc-warning-bg-color: ##fff2bf;
 }
 #solarized_light_theme,
 [data-theme-cta="solarized_light_theme"] {
@@ -483,7 +483,7 @@
   --dc-icon-color: var(--gray1);
   --dc-list-title: #657b83;
   --dc-warning-color: #000000;
-  --dc-warning-bg-color: #ffca00;
+  --dc-warning-bg-color: #fff2bf;
 }
 #rebecca_purple_theme {
   /* Needed for Pop-up Menu */
