Updated with version: 4.43.0 changes

--- a/adblock-betafish/options/color_themes.css
+++ b/adblock-betafish/options/color_themes.css
@@ -15,7 +15,7 @@
   --popup-button-disabled-background-color: var(--gray5);
   --popup-link-text: var(--red4);
   --popup-link-text-decoration: none;
-  --premium-badge-text-color: var(--gray2);
+  --premium-badge-text-color: #333333;
   --premium-badge-border-color: var(--gray2);
   --popup-background-color: var(--gray1);
   --popup-card-background-color: var(--gray2);
@@ -244,8 +244,7 @@
   --popup-separator-color: #2f5b61;
   --popup-accent-hovered-color: #b1c7c7;
   --premium-badge-bg-color: var(--popup-background-color);
-  --premium-badge-text-color: #90a2a2;
-  --premium-badge-border-color: var(--premium-badge-text-color);
+  --premium-badge-text-color: #002c38;
   --block-count-color: var(--red3);
   --popup-background-color: #002c38;
   --popup-card-background-color: #003643;
@@ -368,8 +367,7 @@
   --popup-separator-color: #eee8d5;
   --popup-accent-hovered-color: #4c6369;
   --premium-badge-bg-color: var(--popup-background-color);
-  --premium-badge-text-color: #607c84;
-  --premium-badge-border-color: var(--premium-badge-text-color);
+  --premium-badge-text-color: #eee8d5;
   --block-count-color: var(--red2);
   --popup-background-color: #eee8d5;
   --popup-card-background-color: #fdf6e3;
@@ -492,8 +490,7 @@
   --popup-separator-color: #a98cc5;
   --popup-accent-hovered-color: white;
   --premium-badge-bg-color: var(--popup-background-color);
-  --premium-badge-text-color: #b399cc;
-  --premium-badge-border-color: var(--premium-badge-text-color);
+  --premium-badge-text-color: #48226e;
   --block-count-color: var(--blue3);
   --popup-background-color: #48226e;
   --popup-card-background-color: #663399;
@@ -543,8 +540,7 @@
   --popup-separator-color: #f18686;
   --popup-accent-hovered-color: white;
   --premium-badge-bg-color: var(--popup-background-color);
-  --premium-badge-text-color: #f18686;
-  --premium-badge-border-color: var(--premium-badge-text-color);
+  --premium-badge-text-color: #ce0707;
   --block-count-color: white;
   --popup-background-color: #ce0707;
   --popup-card-background-color: var(--red2);
@@ -600,8 +596,7 @@
   --popup-separator-color: #81defe;
   --popup-accent-hovered-color: white;
   --premium-badge-bg-color: var(--popup-background-color);
-  --premium-badge-text-color: #81defe;
-  --premium-badge-border-color: var(--premium-badge-text-color);
+  --premium-badge-text-color: #2284f7;
   --block-count-color: white;
   --popup-background-color: #2284f7;
   --popup-card-background-color: #03bcfc;
@@ -657,8 +652,7 @@
   --popup-separator-color: #ffd780;
   --popup-accent-hovered-color: white;
   --premium-badge-bg-color: var(--popup-background-color);
-  --premium-badge-text-color: #ffd780;
-  --premium-badge-border-color: var(--premium-badge-text-color);
+  --premium-badge-text-color: #ff9c00;
   --block-count-color: #ffd780;
   --popup-background-color: #ff9c00;
   --popup-card-background-color: var(--yellow2);
