--- a/adblock-betafish/button/popup.css
+++ b/adblock-betafish/button/popup.css
@@ -41,15 +41,16 @@ body {
   display: none;
   font-weight: bold;
   font-size: 8px;
-  border: 0.5px solid var(--premium-badge-border-color);
-  border-radius: 2px;
   margin-right: 8px;
   padding-left: 3px;
   padding-right: 3px;
   line-height: 16px;
-  background-color: var(--premium-badge-bg-color);
+  border: 0.5px solid var(--popup-accent-color);
+  border-radius: 2px;
+  background-color: var(--popup-accent-color);
   color: var(--premium-badge-text-color);
   text-transform: uppercase;
+  cursor: pointer;
 }
 #header-info {
   display: flex;
@@ -61,6 +62,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  position: relative;
 }
 #header-icons .material-icons {
   color: var(--popup-accent-color);
@@ -68,11 +70,43 @@ body {
 #header-icons .material-icons:hover {
   color: var(--popup-accent-hovered-color);
 }
-
+#premium_status_msg:hover {
+  border-color: var(--popup-accent-hovered-color);
+  background-color: var(--popup-accent-hovered-color);
+}
 #header-icons .material-icons:focus {
   outline: var(--popup-url-text-color) auto 5px;
   opacity: 1;
 }
+#help-icon-tooltip,
+#options-icon-tooltip {
+  padding: 8px;
+  display: none;
+  top: 32px;
+  position: absolute;
+  z-index: 100;
+  min-width: 40px;
+  height: 18px;
+  font-size: 10px;
+  font-weight: bold;
+  line-height: 150%;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-color: rgba(51, 51, 51, 0.8);
+  border-radius: 4px;
+}
+#help-icon-tooltip {
+  transform: translateX(-20%);
+}
+#options-icon-tooltip {
+  right: -12px;
+}
+#help_link:hover ~ #help-icon-tooltip,
+#svg_options:hover ~ #options-icon-tooltip {
+  display: flex;
+}
+
 #titletext {
   margin: 16px;
   display: flex;
