Updated with version: 5.1.0 changes

--- a/adblock-betafish/onpageIcon/onpage-icon-user.css
+++ b/adblock-betafish/onpageIcon/onpage-icon-user.css
@@ -8,6 +8,7 @@
   line-height: normal;
   position: fixed;
   z-index: 2147483647 !important;
+  background-color: inherit;
 
   /* CSS reset */
   div,
