--- a/adblock-betafish/options/options.css
+++ b/adblock-betafish/options/options.css
@@ -1375,6 +1375,9 @@ section .theme-section-row {
   align-items: center;
   justify-content: space-evenly;
 }
+.no-social-icons #sidebar-social-links {
+  display: none;
+}
 #sidebar-content-bottom .top-line {
   padding: 15px 0;
   min-width: 50%;
